第一周实验完成

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,9 +73,6 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "netdb.h": "c",
-        "in.h": "c",
-        "parse.h": "c",
-        "stdio.h": "c"
+        "stdlib.h": "c"
     }
 }
