change echo to liso

--- a/project/Makefile
+++ b/project/Makefile
@@ -5,7 +5,7 @@ SRC := $(wildcard $(SRC_DIR)/*.c)
 # 所有目标文件
 OBJ := $(OBJ_DIR)/y.tab.o $(OBJ_DIR)/lex.yy.o $(OBJ_DIR)/parse.o $(OBJ_DIR)/example.o 
 # 所有可执行文件
-BIN := example echo_server echo_client
+BIN := example liso_server liso_client
 # C编译器
 CC  := gcc
 # C预处理器标志
@@ -16,7 +16,7 @@ CFLAGS   := -g -Wall
 # DEPS = parse.h y.tab.h
 
 default: all
-all : example echo_server echo_client
+all : example liso_server liso_client
 
 example: $(OBJ)
 	$(CC) $^ -o $@
@@ -32,10 +32,10 @@ $(SRC_DIR)/y.tab.c: $(SRC_DIR)/parser.y
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c $(OBJ_DIR)
 	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
 
-echo_server: $(OBJ_DIR)/echo_server.o $(OBJ_DIR)/lex.yy.o $(OBJ_DIR)/parse.o $(OBJ_DIR)/y.tab.o 
+liso_server: $(OBJ_DIR)/liso_server.o $(OBJ_DIR)/lex.yy.o $(OBJ_DIR)/parse.o $(OBJ_DIR)/y.tab.o 
 	$(CC) -Werror $^ -o $@
 
-echo_client: $(OBJ_DIR)/echo_client.o
+liso_client: $(OBJ_DIR)/liso_client.o
 	$(CC) -Werror $^ -o $@
 
 $(OBJ_DIR):
