--- a/project/Makefile
+++ b/project/Makefile
@@ -5,7 +5,7 @@ SRC := $(wildcard $(SRC_DIR)/*.c)
 # 所有目标文件
 OBJ := $(OBJ_DIR)/y.tab.o $(OBJ_DIR)/lex.yy.o $(OBJ_DIR)/parse.o $(OBJ_DIR)/example.o 
 # 所有可执行文件
-BIN := example liso_server liso_client
+BIN := example liso_server liso_client login register
 # C编译器
 CC  := gcc
 # C预处理器标志
@@ -15,8 +15,13 @@ CFLAGS   := -g -Wall -w
 # 依赖文件
 # DEPS = parse.h y.tab.h
 
+
+CGI_DIR := cgi-bin
+CGI_SRC := $(wildcard $(CGI_DIR)/*.c)
+CGI_TAR := cgi-bin
+
 default: all
-all : example liso_server liso_client
+all : example liso_server liso_client login register
 
 example: $(OBJ)
 	$(CC) $^ -o $@
@@ -32,10 +37,19 @@ $(SRC_DIR)/y.tab.c: $(SRC_DIR)/parser.y
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c $(OBJ_DIR)
 	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
 
+$(CGI_DIR)/%.o: $(CGI_SRC)/%.c $(CGI_TAR)
+	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
+
 liso_server: $(OBJ_DIR)/liso_server.o $(OBJ_DIR)/lex.yy.o $(OBJ_DIR)/parse.o $(OBJ_DIR)/y.tab.o 
 	$(CC) -Werror $^ -o $@
 
 liso_client: $(OBJ_DIR)/liso_client.o
+	$(CC) -Werror $^ -o $@
+
+login: $(CGI_DIR)/login.o 
+	$(CC) -Werror $^ -o $@
+
+register: $(CGI_DIR)/register.o
 	$(CC) -Werror $^ -o $@
 
 $(OBJ_DIR):
