--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "stdio.h": "c",
         "ip.h": "c",
         "response.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "unistd.h": "c"
     }
 }
